--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "preview": "qwik build preview && vite preview --open",
     "serve": "netlify dev",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "test.unit": "tsm node_modules/uvu/bin.js src unit.ts --tsmconfig tsm.cjs"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.11.1",
@@ -33,7 +34,9 @@
     "eslint-plugin-qwik": "0.11.1",
     "node-fetch": "3.2.10",
     "prettier": "2.7.1",
+    "tsm": "^2.2.2",
     "typescript": "4.8.4",
+    "uvu": "^0.5.6",
     "vite": "3.1.7",
     "vite-tsconfig-paths": "3.5.0"
   }
